# cracknuts

./: .gitattributes  .gitignore  .gitmodules  .pdm-python  .pre-commit-config.yaml  .readthedocs.yaml  CLAUDE.md  DEVELOPER.md  DEVELOPER.zh_cn.md  README.md  README.zh-CN.md  cliff.toml  glitch_ui_test.ipynb  install.ps1  pyproject.toml  requirements-dev.txt
.claude/agents/: architect.md
.claude/docs/: architecture.md
.claude/docs/modules/: cracker_connect_config_sync.md
.claude/rules/: git-conventions.md  pr-conventions.md
.claude/skills/git-commit/: SKILL.md
.claude/skills/release/: SKILL.md
.github/: release.yml
.github/workflow/: release.yml
.github/workflows/: alpha-release.yml  dev-release.yml  pr-ci.yml  release.yml
.opencode/agents/: architect.md
.opencode/skills/release/: SKILL.md
ai/skills/cracknuts-acquisition/: SKILL.md
ai/skills/cracknuts-analysis/: SKILL.md
ai/skills/cracknuts-cracker-o1-usage/: SKILL.md
ai/skills/cracknuts-docs/: SKILL.md
ai/skills/cracknuts-intro/: SKILL.md
demo/: mock_cracker_demo.py
demo/jupyter/: 01-getting_started.ipynb  02-trace_analysis.ipynb  cracknuts_panel_widget.ipynb  cracknuts_quick.ipynb  fly.ipynb  trace-acquisition.ipynb  trace-analysis.ipynb
demo/marimo/: aes_cpa_demo.py  aes_cpa_demo2.py  b.py  cracker.py  cracker2.py  cracker3.py  cracker_panel.html  sync_sampling.py  trace_display.py  trace_panel.py  trace_panel_2.py  trace_panel_bak.py  ui.py
demo/python/: acquisition.py  simple_acq.py
docs/: .readthedocs.yaml  Makefile  README.rst  requirements.txt
docs/api/: README.rst
docs/source/: acquisition.rst  conf.py  cracker.rst  index_zh_cn.txt
install/: install-mac.sh  install.ps1  install.sh  win-install.ps1
jupyter_frontend/: esbuild.dev.config.mjs  esbuild.prod.config.mjs  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
jupyter_frontend/src/: AcquisitionPanel.tsx  AcquisitionPanelWidget.tsx  CrackNutsPanelWidget.tsx  CrackerG1Panel.tsx  CrackerG1Widget.tsx  CrackerPanel.tsx  CrackerPanelWidget.tsx  CrackerS1Panel.tsx  CrackerS1PanelWidget.tsx  FileSelector.css  FileSelector.tsx  GlitchTestPanel.tsx  GlitchTestPanelWidget.tsx  GlitchTestResultAnalysisWidget.tsx  ScopePanel.tsx  ScopePanelWidget.tsx  Slider.css  Slider.tsx  TraceAnalysisPanelWidget.tsx  TraceMonitorPanelWidget.tsx  TracePanel.tsx  TracePanelWidget.tsx  bus.ts
rust/: Cargo.toml
rust/src/: lib.rs
scripts/: add_copyright.py  api_doc.py  build.ps1  build_and_test.py  check.ps1  clean_firmware.py  copyright.py  pycopyright.sh  release.py
src/: __init__.py
src/crackernut/: logger.py
src/cracknuts/: __init__.py  __main__.py  gnd_vnormal_voltage.csv  logger.py
src/nutcracker/: logger.py
test/: b.py  c.py  d.py  y.py  z.py
test/acquisition/: test_acquisition_1.py  test_acquistion.py
test/acquistion/: test_acquistion.py
test/cracker/: mock_server.py  test_basic_cracker.py
test/doc/: transform_data.txt
test/logger/: test_logger.py
tests/: a.py  conftest.py  crush_test.ipynb  crush_trace_analysis.ipynb  downsample_benchmark.py  f1_voltage_test.py  glitch_test.ipynb  glitch_test_test.ipynb  glitch_voltage_test.py  new_struct_anywidget.ipynb  pico_get_avg.py  plotly-test2.ipynb  plotly_test.ipynb  trace-acquisition.ipynb  trace_plot_test.ipynb  x.py  z.py  z2.py  zarr_benchmark.py  zarr_speed_test.ipynb  zarr_speed_test.py
tests/acquisition/: acquisition_demo2.py  acquisition_demo3.py  test_acq_with_mock.py  test_acquisition_1.py  test_acquistion.py
tests/arm/: test_arm_examples.py
tests/cracker/: mock_server.py  test_basic_cracker.py  test_cracker_s1.py  test_cracker_whit_device.py  test_operator.py
tests/io_uart/: test_uart.py  uart_test.py
tests/jupyter/: fifo_remain_test.ipynb  fly.ipynb  glitch_test.ipynb  glitch_test_251215.ipynb  glitch_test_251222.ipynb  glitch_test_test.ipynb  glitch_trigger_test.ipynb  glitch_ui_test.ipynb  new_start.ipynb  new_struct_anywidget.ipynb  pl_io_test1.ipynb  pl_io_test_fly.ipynb  plot.ipynb  plotly-test2.ipynb  test.ipynb  test_crackernut_panel.py  test_cracknuts_panel.ipynb  test_cracknuts_panel.py  test_uart.ipynb  trace-acquisition(reset).ipynb  trace-acquisition.ipynb
tests/logger/: test_logger.py
tests/solver/: test_tracedataset.py
tests/trace/: test_tracedataset.py
tests/utils/: jupyter_console_log_parse.py  serial_server.py
(+141 files in other folders)
