[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "cracknuts"
description = "A library for cracknuts device."
dynamic = ["version"]
requires-python = ">=3.12"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Dingzb", email = "dingzibiao@gmail.com" }]
maintainers = [{ name = "Dingzb", email = "dingzibiao@gmail.com" }]
dependencies = [
    "numpy~=1.26.4",
    "click~=8.1.7",
    "zarr~=2.18.2",
    "packaging~=24.1",
    "anywidget~=0.9.13",
    "pandas~=2.3.3",
    "scipy~=1.16.2"
]

[project.optional-dependencies]
jupyter = [
    "jupyter~=1.1.1",
    "ipykernel~=6.30.1"
]

[project.urls]
homepage = "https://cracknuts.io"

[project.scripts]
cracknuts = "cracknuts.__main__:main"

[tool.setuptools.dynamic]
version = { attr = "cracknuts.__version__" }

[tool.setuptools.package-data]
"cracknuts" = ["firmware/*", "jupyter/static/*", "template/**/*", "tutorials/**/*", "gnd_vnormal_voltage.csv"]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = ["demo", "tests", "docs", "**/*.csv"]

[tool.ruff.lint]
extend-select = [
    "F",
    "E",
    "W",
    "UP",
]

[tool.typos.files]
extend-exclude = [
    "demo",
    "tests"
]

[tool.maturin]
manifest-path = "rust/Cargo.toml"
features = ["pyo3/extension-module"]
module-name = "cracknuts.rs.cracknuts_ext"
