[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cracknuts"
description = "A library for cracknuts device."
dynamic = ["version"]
requires-python = ">=3.12"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Dingzb", email = "dingzibiao@gmail.com" }]
maintainers = [{ name = "Dingzb", email = "dingzibiao@gmail.com" }]
dependencies = [
    "numpy>=2.0.0,<3.0.0",
    "click>=8.0.0,<9.0.0",
    "zarr>=2.18.0,<3.0.0",
    "packaging>=24.0",
    "anywidget>=0.9.0,<1.0.0",
    "pandas>=2.0.0,<3.0.0",
    "scipy>=1.16.0,<2.0.0",
    "numba>=0.63.0,<1.0.0",
    "pillow>=12.0.0,<13.0.0",
    "paramiko>=4.0.0",
]

[project.optional-dependencies]
jupyter = [
    "jupyter~=1.1.1",
    "ipykernel~=6.30.1"
]

[project.urls]
homepage = "https://cracknuts.io"

[project.scripts]
cracknuts = "cracknuts.__main__:main"

[tool.setuptools.dynamic]
version = { attr = "cracknuts.__version__" }

[tool.setuptools.package-data]
"cracknuts" = ["firmware/*", "jupyter/static/*", "template/**/*", "tutorials/**/*", "glitch/voltage_map/*.csv", "cracker/*.csv"]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = ["demo", "tests", "docs", "**/*.csv"]

[tool.ruff.lint]
extend-select = [
    "F",
    "E",
    "W",
    "UP",
]

[tool.typos.files]
extend-exclude = [
    "demo",
    "tests"
]

[dependency-groups]
lint = [
    "ruff>=0.7",
    "typos>=1.24",
    "mypy>=1.13",
]
test = [
    "pytest>=8.3",
    "pytest-html>=4.1",
]
dev = [
    "pre-commit>=3.8",
    "watchfiles>=1.0",
    "nbstripout>=0.8",
    { include-group = "lint" },
    { include-group = "test" },
]
